# pyhpoapi

./: .gitignore  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  config.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_release.yaml  test_coverage.yaml
pyhpoapi/: config.py  helpers.py  main.py  models.py  server.py
pyhpoapi/routers/: annotations.py  term.py  terms.py
tests/: mockontology.py  test_annotation.py  test_basics.py  test_term.py  test_terms.py
tests/data/: hp.obo  ontology.txt  phenotype.hpoa  phenotype_to_genes.txt
