[build_sphinx]
source-dir = doc/
build-dir = doc/_build
all_files = 1

[metadata]
name = pyhpoapi
author = Jonas Marcello
author_email = jonas.marcello@esbme.com
description = A REST API for the HPO ontology using PyHPO
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: pyhpoapi.config.VERSION
url = https://github.com/Centogene/pyhpoapi
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators,
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Dynamic Content,
    Topic :: Internet :: WWW/HTTP :: HTTP Servers,
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application,
license = MIT License
license_files =
    LICENSE

[options]
python_requires = >= 3.7
packages = 
    pyhpoapi
    pyhpoapi.routers

include_package_data = true
zip_safe = False
install_requires =
    pydantic>=2
    scipy
    pyhpo>=3.2
    fastapi
    uvicorn
    aiofiles
